# python-LinearRegressions

./: README.md  insurance.ipynb  pyproject.toml  salary.ipynb
tests/: test_lab13.py
