[tool.poetry]
name = "lab13"
version = "0.1.0"
description = ""
authors = ["BoshraJaber <boshrajaber94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
sklearn = "^0.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
